kappes-space/deployment-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: ghcr.io/leonkappes/kappes-space:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
