kappes-space/service-website.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-svc
  namespace: website
spec:
  ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: 80
  type: LoadBalancer
  selector:
    app: website
