kappes-space/ingress-website.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: website
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - "kappes.space"
      secretName: letsencrypt-wildcard-cert-kappes.space
  rules:
    - host: kappes.space
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name:  website-svc
                port:
                  number: 80
